# network

./: .gitignore  Cargo.toml  Readme.org  build.rs
src/: layer.rs  lib.rs  matrixmath.rs  mnist_loader.rs  network.rs  nonlinearity.rs
tests/: integration_tests.rs
