[package]
name = "network"
version = "0.1.0"
authors = ["Gregor Best <gbe@unobtanium.de>"]
edition = "2018"

[dependencies]
num = "*"
rand = "*"

# ndarray = { version = "0.12.1", features = ["blas"] }
cblas = "*"
# blas-src = { version = "0.2.0", default-features = false, features = ["blas"] }
# openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }

# For MNIST loader
byteorder = "*"
